add the category.

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,18 @@
 <!--index.wxml-->
 <view class="container">
-  <text class="welcome">Welcome to Eat点点！</text>
-  <image src="../../images/logo.png" style="width: 200rpx; height: 200rpx;"></image>
+  <text class="welcome">六和居欢迎您！</text>
+  <image src="../../images/logo.png" style="width: 200rpx; height: 150rpx;"></image>
   <button class="scan-button" type='primary' bindtap="to_menu">扫码点餐</button>
-  <button class="comfirm-button" type='default' bindtap="to_menu_trick">4餐厅1桌</button>
+  <!-- <button class="comfirm-button" type='default' bindtap="to_menu_trick">4餐厅1桌</button> -->
 </view>
+  <view class="page__bd">
+    <view class="weui-grids">
+    <block wx:for="{{grids}}" wx:key="*this">
+      <navigator url="" class="weui-grid" hover-class="weui-grid_active" data-index='{{index}}' bindtap='onNavigatorTap'>
+        <!-- <image class="weui-grid__icon" src="../../images/logo.png" /> -->
+        <button class="comfirm-button" type='primary' bindtap="to_menu_trick">{{book}}</button>
+        <view class="weui-grid__label">{{item.name}}</view>
+      </navigator>
+    </block>
+    </view>
+  </view>
