--- a/pages/menu/menu.wxml
+++ b/pages/menu/menu.wxml
@@ -1,40 +1,53 @@
 <!--index.wxml-->
 <template name="menuItem" >
-  <view class="weui-cell">
-    <view class="weui-cell__hd" style="margin-right: 18rpx;"> <image class="menu-img" src="{{image}}" style="width: 150rpx; height: 150rpx;"></image>
-    </view>
-    <view class="weui-cell__bd">
-        <view class="food-name">{{food_name}}</view>
-        <view class="food-description">{{description}}</view>                        
-    </view>
-    <view class="weui-cell__ft">
-      <view class="food-price">￥{{price}}</view>
-      <image src="../../images/add.png" style="width: 50rpx; height: 50rpx;" data-index="{{index}}" id="{{index}}" bindtap='addDish'></image>
-    </view>
+  <view class="weui-cells">
+       <view>
+            <image class="weui-cell1" src="{{image}}" style="width: 150rpx; height: 150rpx;"></image>
+        </view>
+        <view class="weui-cell2">
+            <view class="food-name">{{food_name}}</view>
+            <view class="food-description">{{description}}</view>                        
+        </view>
+        <view class="weui-cell3">
+          <view class="food-price">￥{{price}}</view>
+          <!-- <text> \n </text> -->
+          <image src="../../images/add.png" style="width: 50rpx; height: 50rpx;" data-index="{{index}}" id="{{index}}" bindtap='addDish'></image>
+        </view>
   </view>
 </template>
 
 <view class="page">
   <view class="page__bd">
      <!-- <view class="weui-tab"> -->
-          <view class="weui-navbar">
-              <view class="weui-navbar__item weui-bar__item_on">
-                  <view class="weui-navbar__title">菜单</view>
-              </view>
-              <view class="weui-navbar__item">
-                  <view class="weui-navbar__title" bindtap="to_comment">评价</view>
-              </view>
-              <view class="weui-navbar__item">
-                  <view class="weui-navbar__title">商家</view>
-              </view>
+      <view class="weui-navbar">
+          <view class="weui-navbar__item weui-bar__item_on">
+              <view class="weui-navbar__title">菜单</view>
           </view>
+          <view class="weui-navbar__item">
+              <view class="weui-navbar__title" bindtap="to_comment">评价</view>
+          </view>
+          <view class="weui-navbar__item">
+              <view class="weui-navbar__title">商家</view>
+          </view>
+      </view>
       <!--</view>-->
-  
-      <scroll-view class="weui-cells" scroll-y="true">
-        <view wx:for="{{menu}}" wx:key="menu_block">
-          <template is="menuItem" data="{{...item}}"/>
-        </view>                         
-      </scroll-view>
+      <view class="menu-container">
+        <scroll-view scroll-y='true' class="nav_left" >
+          <block class="nav_left_items" wx:for="{{navLeftItems}}" wx:key="index" >  
+
+            <!--当前项的id等于item项的id，那个就是当前状态-->  
+            <!--用data-index记录这个数据在数组的下标位置，使用data-id设置每个item的id值，供打开2级页面使用-->  
+            <!-- <view class="nav_left_items {{curNav == item.id ? 'active' : ''}}"
+             bindtap="switchRightTab" data-index="{{index}}" data-id="{{item.id}}">{{item.tree.desc}}</view>   -->
+            <view class="nav_left_items">{{item.category}}</view>  
+          </block>  
+        </scroll-view>
+        <scroll-view scroll-y="true" class="nav_right" >
+          <view wx:for="{{menu}}" wx:key="menu_block">
+            <template is="menuItem" data="{{...item}}"/>
+          </view> 
+        </scroll-view>
+    </view>
 
   <view class="cart-detail" hidden="{{!showCartDetail||!totalNum}}">
 		  <view class="mask" bindtap="hideCartDetail"></view>	
