--- a/pages/menu/menu.wxss
+++ b/pages/menu/menu.wxss
@@ -93,7 +93,7 @@
 .bar {
   display: flex;
   flex-direction: row;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   background:#f7f7f7;
@@ -119,12 +119,12 @@
   margin-top: 20rpx;
 }
 .comfirm-button {
-  /*width: 300rpx;
+  width: 300rpx;
   background-color: #fbc;
   color: white;
   margin: 0;
   position: absolute;
-  right: 2rpx;*/
+  right: 2rpx;
   width:30%;
   float:right;
   /*height:86rpx;
@@ -144,7 +144,7 @@
 }
 
 .cart-detail .mask {
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(211, 210, 210, 0.7);
 }
 
 .cart-detail .cart-list {
@@ -158,19 +158,49 @@
 
 .cart-detail .cart-list .item {
   display: -webkit-flex;
-  color: #333;
+  /* display: flex; */
+  /* width: 100%; */
+   color: #333;
   font-size: 28rpx;
   line-height: 50rpx;
   padding: 6rpx 40rpx;
 }
 
-.cart-detail .cart-list .item .name {
+ .cart-detail .cart-list .item .name {
   -webkit-flex: 1;
 }
 
 .cart-detail .cart-list .item .total {
   width: 120rpx;
+} 
+/* .cartBox {
+  position: fixed;
+  height: calc(100vh - 390rpx);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  z-index: 999;
+  max-height: 80%;
+  overflow-y: scroll;
+  padding-bottom: 250rpx;
 }
+.top {
+  position: -webkit-sticky; 
+  position: sticky; 
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30rpx;
+  border-bottom: 1rpx solid rgba(180, 180, 180,0.3);
+} */
+.selectAll {
+  display: flex;
+  align-items: center;
+} 
+
+
 
 .minus-btn, .add-btn {
   /*position: absolute;*/
@@ -182,7 +212,7 @@
   height: 38rpx;
   border-radius: 50%;
   font-size: 28rpx;
-  /*margin-top: 10rpx;
+  margin-top: 10rpx;
   width: 30rpx;
   height: 30rpx;
   /*vertical-align: center; */
@@ -191,9 +221,14 @@
 }
 
 .cart-detail .cart-list .item .num {
-  width: 50rpx;
+  width: 30rpx;
   text-align: center;
   margin: 0 5rpx;
+}
+
+.line-break {
+  display: block;
+  width: 100%;
 }
 
 .item {
@@ -246,7 +281,7 @@
   top: 0px;
   left: 80px;
   width: 76%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: row;
   /* box-sizing: border-box; */
@@ -276,3 +311,36 @@
   white-space: nowrap;  
   text-overflow: ellipsis;  
 } 
+
+
+.cu-bar {display: flex;
+  position: relative;
+  align-items: center;
+  min-height: 100rpx;
+  justify-content: space-between;
+  position: relative;
+  background-color: white;
+  color: #666666;
+  margin-bottom: 2rpx;
+  background-image: linear-gradient(rgb(0, 180, 230), rgb(250, 250, 250));
+}
+
+.cu-bar .action {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+  max-width: 100%;
+}
+
+.minl{
+  font-size: 29rpx;
+  color: #777;
+  text-align: left;
+  line-height: 60rpx;
+  float: left;
+  background: #f0f4f7; 
+  width: 100%;
+  /* height: 50rpx;  */
+}
+
