--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,8 +1,8 @@
 <!--index.wxml-->
 <view class="container">
-  <text class="welcome">六和居欢迎您！</text>
+  <text class="welcome">六和居欢迎您</text>
   <image src="../../images/logo.png" style="width: 200rpx; height: 150rpx;"></image>
-  <button class="scan-button" type='primary' bindtap="to_menu">扫码点餐</button>
+  <button class="scanBtn" type='primary' bindtap="to_menu">扫码点餐</button>
   <!-- <button class="comfirm-button" type='default' bindtap="to_menu_trick">4餐厅1桌</button> -->
 </view>
   <view class="page__bd">
@@ -10,8 +10,9 @@
     <block wx:for="{{grids}}" wx:key="*this">
       <navigator url="" class="weui-grid" hover-class="weui-grid_active" data-index='{{index}}' bindtap='onNavigatorTap'>
         <!-- <image class="weui-grid__icon" src="../../images/logo.png" /> -->
-        <button class="comfirm-button" type='primary' bindtap="to_menu_trick">{{book}}</button>
-        <view class="weui-grid__label">{{item.name}}</view>
+        <button disabled='{{!item.status}}' class="submitBtn {{item.status ? 'active' : 'gray'}}" bindtap="to_menu_trick" data-id="{{item.table_id}}" data-status="{{item.status}}">{{book}}</button>
+        <view class="weui-grid__label1">{{item.table_name}}</view>
+        <view class="weui-grid__label2">{{item.station}}</view>
       </navigator>
     </block>
     </view>
