--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -19,12 +19,33 @@
 .usermotto {
   margin-top: 200px;
 }
-button {
-  margin-bottom: 10rpx;
+.button {
+  margin-bottom: 5rpx;
 }
 
 .welcome {
   color: #abe;
   font-size: 50rpx;
   text-align: center;
+}
+
+.weui-grid__label1 {
+  margin-top: 5px;
+  display: block;
+  text-align: center;
+  color: #000;
+  font-size: 16px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden
+}
+.weui-grid__label2 {
+  margin-top: 5px;
+  display: block;
+  text-align: center;
+  color: rgb(133, 131, 131);
+  font-size: 12px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden
 }
