--- a/pages/menu/menu.wxss
+++ b/pages/menu/menu.wxss
@@ -160,10 +160,10 @@
   display: -webkit-flex;
   /* display: flex; */
   /* width: 100%; */
-   color: #333;
+  color: #333;
   font-size: 28rpx;
-  line-height: 50rpx;
-  padding: 6rpx 40rpx;
+  line-height: 1.5;
+  padding: 2rpx 40rpx;
 }
 
  .cart-detail .cart-list .item .name {
@@ -204,17 +204,17 @@
 
 .minus-btn, .add-btn {
   /*position: absolute;*/
-  background-color: #abd;
+  background-color: rgb(121, 240, 97);
   /*margin-top: 10rpx;*/
   line-height: 32rpx;
   text-align: center;
-  width: 38rpx;
-  height: 38rpx;
+  width: 40rpx;
+  height: 40rpx;
   border-radius: 50%;
-  font-size: 28rpx;
+  font-size: 40rpx;
   margin-top: 10rpx;
-  width: 30rpx;
-  height: 30rpx;
+  width: 40rpx;
+  height: 40rpx;
   /*vertical-align: center; */
   /*text-align: center;*/
   /*border-radius: 50%;*/
