--- a/pages/menu/menu.wxml
+++ b/pages/menu/menu.wxml
@@ -27,7 +27,7 @@
               <view class="weui-navbar__title" bindtap="to_comment">评价</view>
           </view>
           <view class="weui-navbar__item">
-              <view class="weui-navbar__title">商家</view>
+              <view class="weui-navbar__title" bindtap="to_business">商家</view>
           </view>
       </view>
       <!--</view>-->
@@ -58,14 +58,16 @@
               </view>
           </view>
           </navigator>
-    
+          <view style="height:100px"></view>
         </block>   
         <!-- </view> -->
       </scroll-view>
 
       <view class="cart-detail" hidden="{{hideModal}}">
         <view class="mask" bindtap="hideCartDetail"></view>	
-           <view class="cart-list">
+          <view class="cart-list">
+            <text class='lay-close' bindtap='showCart'>×</text>
+            <view class="order_items">菜品清单-{{tableInfo.table_name}}</view>
             <view class="item" wx:for="{{cartList}}" wx:for-index="index" wx:for-item="itemName" wx:key="this">              
                 <view class="name">{{itemName.food_name}}</view>
                 <view class="total">￥{{itemName.price|Int}}</view>
@@ -74,7 +76,7 @@
                 <view class="add-btn" data-dishs="{{itemName}}" bindtap="tapAddCart">+</view>
           
             </view>
-          </view>
+        </view>
       </view>
 
       <view class="bar">
