--- a/pages/menu/menu.wxss
+++ b/pages/menu/menu.wxss
@@ -139,6 +139,7 @@
   position: absolute;
   left: 0;
   top: 0;
+ 
   width: 100%;
   height: 100%;
 }
@@ -150,10 +151,11 @@
 .cart-detail .cart-list {
   position: absolute;
   left: 0;
-  bottom: 50rpx;
+  bottom: 0rpx;
   width: 100%;
+  
   background: #f7f7f7;
-  padding: 0rpx 0;
+  padding: 0rpx 0rpx;
 }
 
 .cart-detail .cart-list .item {
@@ -161,41 +163,21 @@
   /* display: flex; */
   /* width: 100%; */
   color: #333;
-  font-size: 28rpx;
-  line-height: 0px;
+  font-size: 14px;
+  line-height: 0rpx;
   margin-bottom: 1px;
   padding: 0rpx 100rpx;
 }
 
  .cart-detail .cart-list .item .name {
   -webkit-flex: 1;
+  font-size: 14px;
 }
 
 .cart-detail .cart-list .item .total {
-  width: 120rpx;
+  width: 150rpx;
 } 
-/* .cartBox {
-  position: fixed;
-  height: calc(100vh - 390rpx);
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #fff;
-  z-index: 999;
-  max-height: 80%;
-  overflow-y: scroll;
-  padding-bottom: 250rpx;
-}
-.top {
-  position: -webkit-sticky; 
-  position: sticky; 
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30rpx;
-  border-bottom: 1rpx solid rgba(180, 180, 180,0.3);
-} */
+
 .selectAll {
   display: flex;
   align-items: center;
@@ -206,14 +188,14 @@
 .minus-btn, .add-btn {
   /*position: absolute;*/
   background-color: rgb(121, 240, 97);
-  /*margin-top: 10rpx;*/
-  line-height: 32rpx;
+  
+  line-height: 35rpx;
   text-align: center;
   width: 40rpx;
   height: 40rpx;
   border-radius: 50%;
   font-size: 40rpx;
-  margin-top: 10rpx;
+  margin-top: 0rpx;
   width: 40rpx;
   height: 40rpx;
   /*vertical-align: center; */
@@ -234,9 +216,10 @@
 }
 
 .item {
-  height: 100rpx;
+  height: 70rpx;
   display: flex;
   align-items:center;
+
 }
 
 .menu-img {
@@ -352,9 +335,12 @@
   top: 0;
   width: 50rpx;
   height: 50rpx;
+  font-size: 45rpx;
 }
 
 .order_items{  
   text-align: center; 
-  font-size: 14px;  
+  font-size: 16px;  
+  padding: 25rpx;
 }  
+
